# python-playground

./: .pre-commit-config.yaml  README.md  main.py  mypy.ini  pyproject.toml  requirements.txt  ruff.toml  utils.py
playground/: bank_account.py  cache_decorator.py  employee.py  gen_fibonacci.py  rectangle.py  time_it.py  utils.py
playground/classes/: bank_account.py  employee.py  file_iterator.py
playground/client-server/: server.py
playground/client_server/: client.py  rest_api.py
playground/decorators/: log_input_output.py  time_it.py
tests/: conftest.py  test_bank_account.py  test_cache-decorator.py  test_client_server.py  test_decorate_cache.py  test_employee.py  test_fibonacci.py  test_file_iterator.py  test_log_input_output.py  test_numbers.py  test_rectangle.py  test_rest_api.py  test_time_it.py  test_utils.py
