[tool.poetry]
name = "python-playground"
version = "0.1.0"
description = "Lurning Python"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
mypy = "^1.9.0"
pre-commit = "^3.7.0"
ruff = "^0.3.4"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
