[tool.poetry]
name = "python-playground"
version = "0.1.0"
description = "Lurning Python"
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"

[tool.poetry.group.dev.dependencies]
mypy = "^1.9.0"
pre-commit = "^3.7.0"
ruff = "^0.6.2"
pytest = "^8.1.1"
types-requests = "^2.32.0.20240914"
pydantic = "^2.9.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"